--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "require": {
     	"laravel/framework": "^8.0",
         "php": "^7.4"
+    },
+    "autoload": {
+        "psr-4": {
+            "Microservices\\": "src"
+        }
     }
 }
